tests/ParserTests/data/InvalidReturnTest.xpl
node[] main() {
  return 1;
}
